crates/macro/ui-tests/invalid-static-string.stderr
error[E0308]: mismatched types
 --> ui-tests/invalid-static-string.rs:3:1
  |
3 | #[wasm_bindgen]
  | ^^^^^^^^^^^^^^^
  | |
  | expected `JsString`, found `JsValue`
  | expected `JsString` because of return type
  |
  = note: this error originates in the attribute macro `wasm_bindgen` (in Nightly builds, run with -Z macro-backtrace for more info)
